# PBX_Portal

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  alembic.ini  create_test_data.py  pyproject.toml  requirements.txt  test_apply_workflow.py
.specify/memory/: constitution.md
alembic/: env.py
alembic/versions/: 2b45d8dc907d_add_phone_number_model.py  5be0213f264b_initial_migration_with_tenant_user_.py  83bbb6e064fa_add_did_assignment_model.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_default_tenant.py
scripts/: bootstrap_admin.py
specs/001-zoom-pbx-portal/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-did-inbound-routing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-pbx-control-portal/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/UI/: spec.md
src/: config.py  database.py  logging_config.py  main.py  mariadb_connection.py
src/api/: apply.py  schemas.py  users.py
src/asterisk/: __init__.py  reloader.py
src/auth/: __init__.py  jwt.py  password.py  rbac.py
src/config_generator/: __init__.py  atomic_writer.py  dialplan_generator.py  extension_router.py  inbound_router.py  outbound_policy.py  pjsip_generator.py
src/middleware/: auth.py
src/models/: __init__.py  apply_audit_log.py  audit_log.py  did_assignment.py  extension.py  outbound_policy.py  phone_number.py  tenant.py  user.py
src/schemas/: __init__.py  apply.py  phone_number.py  tenant.py  user.py
src/services/: ami_client.py  (+9 more)
static/: index.html
(+28 files in other folders)
